# inline-completion-model

./: .gitignore  LICENSE  README.md  dataloader.py  pred_code_seq2seq.py  pred_code_seq2seq_cpu.py  pred_code_seq2seq_faiss.py  pred_code_seq2seq_gpu.py  pred_code_v2.py  pred_def_funcs.py  pyproject.toml  run_log_pred_def_funcs.txt  run_log_v2.txt  seq2seq_model.py
log/: pred_code_seq2seq_gpu_run_log.txt  pred_code_seq2seq_gpu_run_log_faiss.txt  run_log_v2.txt
poc/: seq2seq1.py  seq2seq2_attention.py  seq2seq2_attention_big_params.py  seq2seq2_loss_faster.py  wip_seq2seq3_nomic_embed.py  wip_seq2seq3_nomic_embed2.py
seq2seq/: number_translator.py  number_translator1.py  number_translator2.py  number_translator3.py  number_translator3_1.py
synthetic_data/: make_en2zh_data.py
test_data/: test_pycode.py
transformer/: inline_completion_model.py
wip_model/: pred_code_seq2seq.py
