[tool.poetry]
name = "inline-completion-model"
version = "0.1.0"
description = ""
authors = ["xlisp <chanshunli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
transformers = "^4.46.3"
faiss-cpu = "^1.9.0.post1"
ollama = "^0.4.2"
jieba = "^0.42.1"
ipython = "^8.29.0"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
